Optimised the settings page, optimised the inventory page as well using single bulk query and other techniques, settings page has an issue of quick action under the system settings tab that need to be adjusted

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,22 @@
-fastapi
-uvicorn
-psycopg2-binary 
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.1
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-dateutil==2.8.2
+email-validator==2.1.0
+requests==2.31.0
+aiofiles==23.2.1
+Jinja2==3.1.2
+itsdangerous==2.1.2
+python-magic==0.4.27
+Pillow==10.1.0
+qrcode==7.4.2
+reportlab==4.0.7
+openpyxl==3.1.2
+pandas==2.1.3
+numpy==1.26.2 
