--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-psycopg2-binary==2.9.9
+asyncpg==0.30.0
 python-dotenv==1.0.0
-pydantic==2.5.0
+pydantic==2.8.2
 requests==2.31.0
-psutil==5.9.6 
+psutil==5.9.6
+email-validator==2.1.1
